# kooix-cut

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  ROADMAP.md  ai_detect.py  build.spec  generate_icons.py  gui.py  kooix_cut.py  modern_gui.py  pyproject.toml  requirements.txt  tk_gui.py  video_sort.py
.github/workflows/: build.yml
assets/: icon.icns  kooix-cut.desktop
docs/: BUILD_OPTIMIZATION.md  SORTING.md
scripts/: build_local.bat  build_local.sh  build_optimized.sh
